--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,6 +161,8 @@
 }
 
 
+
+
 #rightDiv {
     position: fixed;
     top: 56px;
@@ -225,7 +227,7 @@
 #write-aes {
     display: block;
     width: 100%;
-    height: 300px;
+    height: 370px;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -238,3 +240,84 @@
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
 }
+
+.texth4 {
+    position: relative;
+    top: -5px;
+}
+
+.error          { background:
+     #F0D6D6; padding: 0.5em; }
+.example        { padding-left: 2.3em; text-decoration: none;color: #003399; font-style: italic; margin:0;}
+.ngram          { font-size: 1em; font-weight: bold; line-height: 1.5em; font-family: Arial, Helvetica, sans-serif; margin-top:8px; margin-bottom:0;}
+.example .main {}
+.example .prev {opacity: 0.6;}
+.example .post {opacity: 0.6;}
+.example .translate {opacity: 0.7; padding-right:5px}
+.example .c1 {color:white;}
+.example .c2 {color:white;}
+
+#write-aes span:hover {
+    color: red;
+  }
+
+
+
+
+#hdtb_msb {
+    outline-width: 0;
+    outline: none;
+    display: inline-block;
+    float: left;
+    position: relative;
+    white-space: nowrap;
+    line-height: 35px;
+    color: #666;
+    font-size: small;
+    -webkit-user-select: none;
+  }
+
+  .hdtb_msel {
+    border-bottom: 3px solid #dd4b39;
+    color: #dd4b39;
+    font-weight: bold;
+    height: 35px;
+    margin: 2px 8px 0;
+    padding: 0 8px;
+  }
+  
+  .hdtb_mitem {
+    outline-width: 0;
+    outline: none;
+    display: inline-block;
+    white-space: nowrap;
+    line-height: 35px;
+    font-size: small;
+    -webkit-user-select: none;
+    font-family: arial,sans-serif;
+  }
+  
+  #hdtbSum {
+    background: #fff;
+    border-bottom: 1px solid #ebebeb;
+    width: 600px;
+    height: 40px;
+    left: -30px;
+    line-height: 35px;
+    padding: 0;
+    position: relative;
+    z-index: 102;
+    margin-bottom: 10px;
+  }
+  
+  .hdtb_mitem a {
+    color: #777;
+    outline-width: 0;
+    outline: none;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 8px;
+    padding: 0 8px;
+    text-decoration: none;
+  }
+  
